--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Varun Chhangani's Blog
 author: Varun Chhangani
-email: chhanganivarun.github.io
+email: varunchhangani@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Blog by Varun Chhangani his thoughts and ideas .
 # social links
